--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@
 .pytest_cache/*
 .coverage
 project/tests/report.html
+
+# Internal documents
+**/Scratch.ipynb
+project/figures/*
+project/tests/figures/*
