--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
       - checkout
       - run:
           command: |
-            make setup
-            . /home/circleci/.financial-analysis/bin/activate
+            sudo pip install pipenv
+            pipenv install
             make test
             make lint
 
