--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,4 @@ project/tests/report.html
 # Internal documents
 **/Scratch.ipynb
 project/figures/*
-project/tests/figures/*
+# project/tests/figures/*
